--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,133 @@
 body {
-  font-family: 'Josefin Sans';
-  background-color: #FFFAFB;
+  background-color: #1a1a1a;
+  text-decoration: none !important;
+
 }
+
+a{
+  text-decoration: none;
+}
+
 
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
+}
 
+.motivation_ai{
+  width: 100%;
+  min-height: 100vh;
+}
+
+.under{
+  color: #ffcc00;
+  display: flex;
+  justify-content: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-top: 7rem;
+  
+}
+
+.pushup{
+  color: #282828;
+  border:1px solid #22d664;
+  background-color: #22d664;
+  border-radius: 0.4rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding: 0.5rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+
+
+.make_me_center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.make_me_centere{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.till_then{
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin-top: 1rem;
+}
+
+.message_ai{
+  color: #22d664;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 4rem;
+  font-weight: bolder;
+}
+
+.message_ai_sub{
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  letter-spacing: 0.09rem;
+  margin-top: 2rem;
+  line-height: 2.2rem;
+}
+
+
+li{
+  background: #ffffffac !important;
+  border-radius: 0.7rem !important;
+  margin: 0.2rem;
+}
+
+.pagi{
+  color: white !important;
+}
+
+.footer{
+  background: #282828;
+  border-top-right-radius:2rem ;
+  border-top-left-radius:2rem ;
+}
+
+.input_search{
+  background: #ffffff00 !important;
+  color: white !important;
+  border: 1px solid #e0e0e0a0 !important;
+}
+
+.input_search:focus{
+  outline: none !important;
+}
+
+.logo_unenko{
+  font-size: 1.5rem;
+  color: red;
+  font-weight: bold;
+  text-decoration: none !important;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.head{
+  color: #ffffff;
+}
+.sub{
+  color: rgb(211, 211, 211);
+}
+
+.motivation{
+  color: white;
+}
+
+.demo{
+  color: #ff0303;
 }
 
 ::-webkit-scrollbar {
@@ -60,7 +180,22 @@ body {
   width: 700px;
   height: 900px;
   margin-top: -330px;
+  border-bottom-left-radius: 7rem;
+}
 
+.my_footer_text_main{
+  color: rgb(201, 201, 201);
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-left: 0.5rem;
+  letter-spacing: 0.1rem;
+}
+
+.my_footer_text{
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  letter-spacing: 0.1rem;
 }
 
 .exercise-card {
@@ -85,6 +220,14 @@ body {
 .bodyPart-card {
   transform: scale(1, 1);
   transition: 0.3s all ease-in-out;
+
+/* From https://css.glass */
+background: rgba(40, 40, 40, 0.48) !important;
+border-radius: 16px !important;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1) !important;
+backdrop-filter: blur(7px) !important;
+-webkit-backdrop-filter: blur(7px) !important;
+border: 1px solid rgba(40, 40, 40, 0.34) !important;
 }
 
 .exercise-card:hover,
@@ -110,6 +253,15 @@ body {
   .detail-image {
     width: 300px;
     height: 300px;
+  }
+
+  .make_me_vanish{
+    display: none;
+  }
+
+  .res_nav{
+    font-size: 1.2rem;
+    max-width: max-content;
   }
 
 
@@ -144,6 +296,19 @@ body {
 }
 
 
+
+
+
+@media screen and (max-width:1125px) {
+  .motivation_ai{
+    margin: 1rem;
+  }
+}
+
+
+ 
+
+
 .motivation_quotes{
   cursor: pointer;
   box-shadow: 4px 4px 20px #ff00003b;
@@ -151,4 +316,242 @@ body {
 
 .bmi-box{
   margin-top: 200px;
+}
+
+
+.motivation_ai{
+  margin-top: 5.5rem;
+}
+
+.form_ai{
+  margin-top: 3rem;
+}
+
+.make_me_white{
+  color: white !important;
+}
+
+.input_select_wplan{
+  border: 1px solid rgb(156, 156, 156);
+  color: white;
+}
+
+label{
+  color: white !important;
+}
+
+.make_me_border{
+  border: 1px solid rgba(231, 231, 231, 0.749) !important;
+}
+
+.MuiOutlinedInput-root{
+  color: rgb(173, 173, 173) !important;
+}
+
+legend span{
+  color: gray;
+}
+
+
+.show_the_days{
+  color: white;
+  margin-left: 0.4rem;
+}
+
+
+.submit_data{
+  background: rgb(10, 226, 118);
+  color: black;
+  font-size: 1.4rem;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  padding: 0.6rem;
+  border: none;
+  border-radius: 0.8rem;
+  cursor: pointer;
+  transition: all 0.3s linear;
+}
+
+.submit_data:hover{
+  transform: scale(1.01);
+}
+
+.submit_data:active{
+  transform: scale(0.97);
+}
+
+
+#demo-simple-select-label{
+  margin-top: 2rem !important;
+}
+
+
+.slider-track {
+  background-color: #ffffff;
+}
+
+/* Set the thumb color to orange with low alpha */
+.slider-thumb {
+  background-color: #ffffffc0;
+}
+
+
+.loade{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.Typewriter__wrapper{
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1rem;
+  letter-spacing: 0.04rem;
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.showWorkout{
+  margin-top: 3rem;
+}
+
+.day_of_workout{
+  margin-top: 3rem;
+  /* background: rgba(0, 0, 0, 0.463); */
+  padding: 0.5rem;
+  border-radius: 0.9rem;
+  font-size: 2rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  color:white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.actual_workout_workout{
+  font-size: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.9rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  letter-spacing: 0.2rem;
+  color: rgb(221, 188, 22);
+  text-align: center;
+  overflow: auto;
+  cursor: pointer;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.actual_workout_workout:hover{
+  color: rgb(229, 19, 19);
+}
+
+.message_of_more_request{
+  color: #FF2625;
+  font-size: 1.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+
+@media screen and (max-width:646px) {
+  .message_ai{
+    font-size: 2rem;
+  }
+  
+  .message_ai_sub{
+    color: white;
+    font-size: 1rem;
+    letter-spacing: 0.09rem;
+    margin-top: 2rem;
+    line-height: 2.2rem;
+  }
+
+  .day_of_workout{
+    margin-top: 3rem;
+    padding: 0.5rem;
+    border-radius: 0.9rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: 0.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+    width: 200px;
+    color: white !important;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  .actual_workout_workout{
+    font-size: 0.8rem;
+    /* background: rgba(193, 193, 193, 0.463); */
+    padding: 0.5rem;
+    border-radius: 0.9rem;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 0.2rem;
+    color: rgb(221, 188, 22);
+    text-align: center;
+    height: max-content;
+    width: 400px;
+    overflow: auto;
+  }
+  .MuiOutlinedInput-root{
+    color: rgb(173, 173, 173) !important;
+    margin-right: 1rem !important;
+  }
+
+  
+  
+}
+#root > div > div.motivation_ai.MuiBox-root.css-0 > div.form_ai > form > div > div{
+  margin-right: 1rem !important;
+}
+
+@media screen and (max-width:400px) {
+
+
+}
+
+.MuiOutlinedInput-root{
+  color: rgb(173, 173, 173) !important;
+  margin-right: 1rem !important;
+
+}
+
+.message_ai{
+  background: -webkit-linear-gradient(0deg , #ff8e1c 14%, #FFF 22%, #149e08 40%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+/* .out_blue{
+  background: -webkit-linear-gradient(#FFF , #197df8 );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+} */
+
+.learn_workout{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  /* margin-top: 2rem; */
+}
+
+.main_p_for_workouts{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
